# todoServer

./: .ycm_extra_conf.py  CMakeLists.txt  tags
data/: foobar.txt
include/controllers/: TaskListController.h
include/resources/: Index.h  TaskList.h
src/: main.cpp
src/controllers/: TaskListController.cpp
src/resources/: Index.cpp  TaskList.cpp
